# PeakForge

./: .gitignore  README.md  chipdiff.py  io_utils.py  motif_ranking.py  peak_shape.py  peakforge  prior_utils.py  pyproject.toml
colab/: PeakForge_Colab_Quickstart.ipynb  README.md  setup_colab.sh
example/: README.md  analyze_replicates.py  download_encode.sh  run_example2.sh  run_example_1v1.sh  run_lopo_validation.sh  run_pipeline.sh  run_with_prior.sh  summarize_lopo_validation.py
example/data/: README.md  encode_manifest.tsv  encode_manifest_3v3.tsv  metadata.tsv  metadata_1v1.tsv  metadata_3v3.tsv
example/data2/: README.md
example/peak_shape/: README.md  make_demo_tracks.py  run_peak_shape.sh
notebooks/: peakforge_peak_shape_demo.py
results/prior_demo/prior_inputs/: demo_prior.bed  demo_shape.json  prior_manifest.json
tests/: test_prior_weighting.py
