[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peakforge"
version = "0.1.0"
description = "Replicate-aware and data-limited differential analysis for ATAC-seq, CUT&Tag, and ChIP-seq peak data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "deeptools>=3.5.5",
  "gseapy>=1.1.3",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyBigWig>=0.3.22",
  "pydeseq2>=0.4.7",
  "pyranges>=0.0.129",
  "pysam>=0.22",
  "scipy>=1.10",
  "seaborn>=0.13",
  "statsmodels>=0.14",
]

[project.scripts]
peakforge = "chipdiff:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
macs3 = ["macs3>=3.0.1"]

[tool.setuptools]
py-modules = ["chipdiff", "io_utils", "motif_ranking", "peak_shape"]
